[project]
name = "web3-blog"
version = "0.1.0"
description = "Exploring blockchain, math, and smart contracts through a security lens."
authors = [
    { name = "avidthinker" }
]
requires-python = ">=3.14.0"

dependencies = [
    "matplotlib>=3.10.7",
    "mkdocs>=1.6.1",
    "mkdocs-get-deps>=0.2.0",
    "mkdocs-material>=9.6.23",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-plotly-plugin>=0.1.3",
    "mkdocs-simple-hooks>=0.1.5",
    "numpy>=2.3.4",
    "pymdown-extensions>=10.16.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
